...
            'Detailed information about the identified meal, or '
            'default/empty info if no meal was identified.',
        properties: {
          'meal_name': Schema.string(
            description:
                'A concise name for the meal, max 35 characters (e.g., '
                "'Chicken Salad', 'Apple Slices'). If no meal is identified, "
                'this could be an empty string.',
          ),
          'meal_quantity': Schema.string(
            description:
                "A descriptive quantity of the food (e.g., '1 bowl', "
                "'2 slices', '1 medium apple', '1 serving'). "
...
