...
  "meal": {
    "ohNo": "Oh no!",
    "delete": "Delete",
    "editMeal": "Edit Meal",
    "addMeal": "Add Meal",
    "saveMeal": "Save Meal",
    "save": "Save",
    "mealName": "Meal Name",
    "mealQuantity": "Meal Quantity",
    "mealQuantityHint": "e.g., 1 bowl, 2 slices",
    "timeOfMeal": "Time of Meal",
    "timeOfMealHint": "Select the time you had your meal",
    "mealType": "Meal Type",
...
